Mise à jour des thèmes de VigiBoard suite aux modifications des révisions r4800 et r4801.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@4802 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/events_table.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
                     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:py="http://genshi.edgewall.org/"
@@ -10,7 +10,7 @@
 <?python from vigilo.models.tables import StateName ?>
 <?python from vigiboard.controllers.plugins import VigiboardRequestPlugin ?>
 
-<head> 
+<head>
     <py:choose>
         <title py:when="hostname and servicename">
             VigiBoard - ${l_('Events table for service "%(servicename)s" on "%(hostname)s"') % {
@@ -29,55 +29,55 @@
 </head>
 
 <body>
-    <div style="display: none"> 
-        <py:for each="(plugin_name, plugin_instance) in plugins">
-            <xi:include href="plugins/${plugin_name}.html" /> 
+    <div style="display: none">
+        <py:for each="(plugin_name, plugin_instance) in config['columns_plugins']">
+            <xi:include href="plugins/${plugin_name}.html" />
             ${plugin_template(plugin_name, plugin_instance)}
         </py:for>
     </div>
 
-    <table class="vigitable" summary="Event table" py:with="columns_count = sum([p[1].get_generated_columns_count() for p in plugins])">
+    <table class="vigitable" summary="Event table" py:with="columns_count = sum([p[1].get_generated_columns_count() for p in config['columns_plugins']])">
         <thead>
             <tr>
                 <th colspan="${columns_count}">
-            
+
                     <div class="navigation_arrow left_arrow">
                         <py:choose>
                             <img py:when="page == 1" src="${tg.url('/images/dis_top_left_arrow.png')}" alt="Previous" title="Previous page" />
-                            
+
                             <a py:when="hostname and servicename" href="${tg.url('/item/%(page)d/%(hostname)s/%(servicename)s' % {'page': page-1, 'hostname': hostname, 'servicename': servicename})}">
-                            
+
                                 <img src="${tg.url('/images/top_left_arrow.png')}" alt="Previous" title="Previous page"/>
                              </a>
-                             
+
                             <a py:when="hostname" href="${tg.url('/item/%(page)d/%(hostname)s' % {'page': page-1, 'hostname': hostname})}">
                                 <img src="${tg.url('/images/top_left_arrow.png')}" alt="Previous" title="Previous page"/>
                              </a>
-                             
+
                             <a py:otherwise="" href="${tg.url('/%d' % (page-1))}">
                                 <img src="${tg.url('/images/top_left_arrow.png')}" alt="Previous" title="Previous page"/>
                              </a>
                         </py:choose>
                     </div>
-        
+
                     <div class="navigation_arrow right_arrow">
                         <py:choose>
                             <img py:when="page >= nb_pages" src="${tg.url('/images/dis_top_right_arrow.png')}"  alt="Next" title="Next page" />
-                            
+
                              <a py:when="hostname and servicename" href="${tg.url('/item/%(page)d/%(hostname)s/%(servicename)s' % {'page': page+1, 'hostname': hostname, 'servicename': servicename})}">
                                 <img src="${tg.url('/images/top_right_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
-                             
+
                              <a py:when="hostname" href="${tg.url('/item/%(page)d/%(hostname)s' % {'page': page+1, 'hostname': hostname})}">
                                 <img src="${tg.url('/images/top_right_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
-                             
+
                              <a py:otherwise="" href="${tg.url('/%d' % (page+1))}">
                                 <img src="${tg.url('/images/top_right_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
                         </py:choose>
                     </div>
-                    
+
                     <py:choose>
                         <div py:when="hostname and servicename" class="table_title">
                             <span>${l_('Events table for service "%(servicename)s" on "%(hostname)s"') % {
@@ -92,12 +92,12 @@
                             <span>Events table</span>
                         </div>
                     </py:choose>
-                    
-                </th>  
+
+                </th>
             </tr>
-    
+
             <tr class="plugins">
-                <py:for each="(plugin_name, plugin_instance) in plugins">
+                <py:for each="(plugin_name, plugin_instance) in config['columns_plugins']">
                     <xi:include href="plugins/${plugin_name}.html"/>
                     ${header_template(plugin_name, plugin_instance)}
                 </py:for>
@@ -106,37 +106,37 @@
         <tfoot>
             <tr>
                 <th colspan="${columns_count}">
-                
+
                     <div class="navigation_arrow left_arrow">
                         <py:choose>
                          <img py:when="page == 1" src="${tg.url('/images/dis_bottom_left_arrow.png')}" alt="Previous" title="Previous page" />
-                         
+
                              <a py:when="hostname and servicename" href="${tg.url('/item/%(page)d/%(hostname)s/%(servicename)s' % {'page': page-1, 'hostname': hostname, 'servicename': servicename})}">
                                 <img src="${tg.url('/images/bottom_left_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
-                             
+
                              <a py:when="hostname" href="${tg.url('/item/%(page)d/%(hostname)s' % {'page': page-1, 'hostname': hostname})}">
                                 <img src="${tg.url('/images/bottom_left_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
-                             
+
                             <a py:otherwise="" href="${tg.url('/%d' % (page-1))}">
                                 <img src="${tg.url('/images/bottom_left_arrow.png')}" alt="Previous" title="Previous page"/>
                             </a>
                         </py:choose>
                     </div>
-        
+
                     <div class="navigation_arrow right_arrow">
                         <py:choose>
                             <img py:when="page >= nb_pages" src="${tg.url('/images/dis_bottom_right_arrow.png')}"  alt="Next" title="Next page" />
-                
+
                              <a py:when="hostname and servicename" href="${tg.url('/item/%(page)d/%(hostname)s/%(servicename)s' % {'page': page+1, 'hostname': hostname, 'servicename': servicename})}">
                                 <img src="${tg.url('/images/bottom_right_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
-                             
+
                              <a py:when="hostname" href="${tg.url('/item/%(page)d/%(hostname)s' % {'page': page+1, 'hostname': hostname})}">
                                 <img src="${tg.url('/images/bottom_right_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
-                             
+
                             <a py:otherwise="" href="${tg.url('/%d' % (page+1))}">
                                 <img src="${tg.url('/images/bottom_right_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
@@ -149,7 +149,7 @@
                                   ${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info}
                                   <br/>
                                 Pages
-    
+
                                     <py:for each="p in range(1, nb_pages + 1)">
                                         <py:choose>
                                               <py:when test="p == page">${p}</py:when>
@@ -172,18 +172,18 @@
                             </span>
                         </div>
                     </py:choose>
-                    
+
                 </th>
             </tr>
         </tfoot>
-    
+
         <tbody py:choose="not rows_info['total_rows']">
             <tr py:when="1">
                 <td colspan="${columns_count}" class="plugin_error">There are no events.</td>
             </tr>
-    
+
             <tr py:when="0" py:for="(index, event) in enumerate(events)" class="${['odd', 'even'][index % 2]}">
-                <py:for each="(plugin_name, plugin_instance) in plugins">
+                <py:for each="(plugin_name, plugin_instance) in config['columns_plugins']">
                     <xi:include href="plugins/${plugin_name}.html"/>
                     ${data_template(plugin_name, plugin_instance, event)}
                 </py:for>
