Amélioration de la page des graphes d'un hôte
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@4853 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigigraph/css/vigigraph.css
+++ b/src/vigilo/themes/public/vigigraph/css/vigigraph.css
@@ -134,3 +134,25 @@ body.searchresults table td {
 body.searchresults table td.hostname {
     padding-right: 1em;
 }
+
+
+/* FullHostPage */
+body.fullhostpage #content {
+    margin: 0;
+    padding: 0 1em;
+    font-size: 11pt;
+    color: black;
+}
+body.fullhostpage #content h2 {
+    font-size: 130%;
+}
+body.fullhostpage #content p.menu {
+    margin: 0.8em 0;
+}
+body.fullhostpage #content p.menu a {
+    white-space: nowrap;
+}
+body.fullhostpage img {
+    border: 0
+}
+
