--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -44,7 +44,7 @@
 </py:match>
 
 <py:match path="body" once="true" py:with="body_attr = dict(select('@*'))">
-<?python body_attr.update(dict(style='font-size:' + tg.session.get('fontsize', tg.config['vigiboard_font.size']) + ';' + body_attr.get('style', ''))) ?>
+<?python body_attr.update(dict(style='font-size:' + tg.session.get('fontsize', '10px') + ';' + body_attr.get('style', ''))) ?>
 <body py:attrs="body_attr">
 
 ${toolbar()}
