Correction du nom du moteur de recherche (pas vraiment spécifique à VigiGraph).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@4971 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigigraph/master.html
+++ b/src/vigilo/themes/templates/vigigraph/master.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="${tg.url('/css/reset.css')}" />
     <link rel="stylesheet" type="text/css" media="screen" href="${tg.url('/css/style.css')}" />
     <link rel="search" type="application/opensearchdescription+xml"
-        title="Vigigraph search" href="${tg.url('/rpc/getOpenSearch')}"/>
+        title="Vigilo search" href="${tg.url('/rpc/getOpenSearch')}"/>
 </head>
 
 <body py:match="body" py:attrs="select('@*')">
