Suppression de virgules superlfues dans VigiBoard + templates (#). Mise à jour du development.ini de VigiBoard (use_kerberos -> external_auth).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@4989 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/plugins/details.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/details.html
@@ -67,7 +67,7 @@ window.addEvent("domready", function () {
         height: ${[190, 220][nb_links != 0] + nb_links * 14},
         closed: true,
         horizontal: 'right left',
-        vertical: 'top top',
+        vertical: 'top top'
     });
     window.details_dialog.toggleCollapse();
     window.details_dialog.toggleCollapse();
@@ -111,7 +111,7 @@ window.addEvent("domready", function () {
                     if (res == null || !res.errors)
                         return;
                     alert(res.errors.join('\n'));
-                },
+                }
             });
             window.details_dialog.options.parent = item;
             // Permet d'afficher l'événement sélectionné autrement.
