--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -88,7 +88,7 @@ ${toolbar()}
             zIndex: window.search_dialog.domObj.getStyle('zIndex').toInt(),
             minLength: 1,
             selectMode: 'type-ahead',
-            postVar: varname,
+            postVar: varname
         });
     }
 /*]]>*/
