Modification de l'auto-compléteur dans VigiBoard pour afficher toutes les possibilités (liste déroulante) au lieu de 10 maximum (#284). Suppression d'une virgule superflue qui bloque le passage dans IE (#276).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@5001 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -88,7 +88,8 @@ ${toolbar()}
             zIndex: window.search_dialog.domObj.getStyle('zIndex').toInt(),
             minLength: 1,
             selectMode: 'type-ahead',
-            postVar: varname
+            postVar: varname,
+            overflow: true
         });
     }
 /*]]>*/
