Force un affichage avec retour à la ligne des champs dans le formulaire d'authentification. Il s'agit d'un contournement temporairement pour assurer la compatibilité avec IE 7 (#275).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@5041 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/common/css/style.css
+++ b/src/vigilo/themes/public/common/css/style.css
@@ -176,9 +176,9 @@ form.loginfields input.text
     height: 21px;
     padding: 5px;
     border: 0;
-/*    background-color: #333333;*/
     background: url('../images/inputbg.png') top left no-repeat;
     color: #fff;
+    clear: left;
 }
 
 form.loginfields input#submit
@@ -330,4 +330,3 @@ div.clearingdiv {
 #profileform {
     text-align: center;
 }
-
