Adaptation de quelques styles de VigiMap pour IE7 (#164).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@5043 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/ServiceElement.css
+++ b/src/vigilo/themes/public/vigimap/css/ServiceElement.css
@@ -6,7 +6,7 @@
 }
 
 #map .serviceelement img.icon {
-    display: block;
+    display: inline;
 }
 #map .serviceelement div.status img.icon {
     opacity: 0.8;
@@ -30,6 +30,3 @@
 #details ul.tags li img {
     vertical-align: middle;
 }
-
-
-
