--- a/src/vigilo/themes/public/vigigraph/css/vigigraph.css
+++ b/src/vigilo/themes/public/vigigraph/css/vigigraph.css
@@ -20,17 +20,21 @@ h1 a:hover {
 }
 
 #logo {
-    margin: 0.2em;
+    margin: 0.3em 0.2em;
     float: left;
 }
 
 #header {
     border-bottom: 1px solid #a4a4a4;
-    height: 30px;
+    height: 24px;
     background-color: #f1f1f1;
     margin: 0;
     padding: 0.1em 0;
     vertical-align: middle;
+}
+
+#header h1 {
+    margin-top: 0.1em;
 }
 
 .header_item {
@@ -80,80 +84,35 @@ img.logo {
 
 /* Flash */
 
-#flash, .notice {
-    font-size:120%;
-    font-weight:bolder;
-    margin:0pt auto 0.5em;
-    width:680px;
+#flash {
+	opacity: 0;
 }
 
+#flash, .notice {
+    font-size: 120%;
+    font-weight: bolder;
+    bottom: 0px;
+    right: 0px;
+    width: 100%;
+    position: absolute;
+    /* Pour les navigateurs un peu plus évolués. */
+    position: fixed;
+}
 #flash div, .notice {
-    padding:20px 15px 20px 65px;
+    padding: 8px 7px 6px 44px;
 }
 
 #flash .ok {
-    background:#d8ecd8 url(../images/ok.png) no-repeat scroll 10px center;
+    background: #d8ecd8 url(../images/ok.png) no-repeat scroll 0px center;
 }
-
 #flash .warning {
-    background:#fff483 url(../images/warning.png) no-repeat scroll 10px center;
+    background: #fff483 url(../images/warning.png) no-repeat scroll 0px center;
 }
-
 #flash .error {
-    background:#f9c5c1 url(../images/error.png) no-repeat scroll 10px center;
+    background: #f9c5c1 url(../images/error.png) no-repeat scroll 0px center;
 }
-
 #flash .alert,
 #flash .info,
 .notice {
-    background:#EEEEFF url(../images/info.png) no-repeat scroll 10px center;
+    background: #EEEEFF url(../images/info.png) no-repeat scroll 0px center;
 }
-
-
-/* Search page */
-body.searchresults h1 {
-    font-size: 130%;
-    font-family: sans-serif;
-    text-align: center;
-    margin-top: 1em;
-    font-weight: bold;
-}
-
-body.searchresults h2 {
-    font-size: 120%;
-    margin: 1em 0 0.5em 1em;
-}
-
-body.searchresults table {
-    margin-left: 1em;
-    border-collapse:collapse;
-}
-body.searchresults table td {
-    padding: 0.2em;
-}
-body.searchresults table td.hostname {
-    padding-right: 1em;
-}
-
-
-/* FullHostPage */
-body.fullhostpage #content {
-    margin: 0;
-    padding: 0 1em;
-    font-size: 11pt;
-    color: black;
-}
-body.fullhostpage #content h2 {
-    font-size: 130%;
-    margin-top: 0.5em;
-}
-body.fullhostpage #content p.menu {
-    margin: 0.8em 0;
-}
-body.fullhostpage #content p.menu a {
-    white-space: nowrap;
-}
-body.fullhostpage img {
-    border: 0
-}
-
