Quelques améliorations dans le vigigraph mootoolsifié. Ajout de l'impression globale de tous les graphes visibles (#299). Mise à jour des traductions de VigiGraph et des thèmes.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@5128 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigigraph/main.html
+++ b/src/vigilo/themes/templates/vigigraph/main.html
@@ -39,6 +39,7 @@
     <script type="text/javascript" src="${tg.url('/js/tree.js')}"></script>
 
     <script type="text/javascript" src="${tg.url('/js/search.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/print.js')}"></script>
 </head>
 
 <body py:match="body" py:attrs="select('@*')">
