Aggrandissement champs de saisie dans VigiMap en mode édition (#341).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@5256 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/ServiceElement.css
+++ b/src/vigilo/themes/public/vigimap/css/ServiceElement.css
@@ -30,3 +30,10 @@
 #details ul.tags li img {
     vertical-align: middle;
 }
+
+#mapnode_form_label,
+#mapnode_form_host_word,
+#mapnode_form_service_word,
+#mapnode_form_graph_word {
+    width: 230px;
+}
