Possibilité pour l'administrateur de forcer l'activation du rafraîchissement automatique lors du chargement de VigiMap, sur le même principe que VigiBoard (#340).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@5258 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/index.html
+++ b/src/vigilo/themes/templates/vigimap/index.html
@@ -6,7 +6,11 @@
     <xi:include href="main.html" />
 <head>
     <title>VigiMap</title>
-    <!--<script type="text/javascript" src="${tg.url('/js/MainDisplay.js')}"></script>-->
+    <script type="text/javascript">
+    window.addEvent('load', function () {
+        menu.refresh_button.setActive(${int(asbool(tg.config.get('refresh_enabled', False)))});
+    });
+    </script>
 </head>
 <body>
 
